[package]
edition = "2021"
name = "uc8151_async_test"
version = "0.1.0"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-executor = { version = "0.6.3", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "task-arena-size-32768",
] }
embassy-futures = { version = "0.1.1" }
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.2"
embedded-text = "0.7.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
tinybmp = "0.6.0"
uc8151 = { path = "../../" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true
lto = "off"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
