# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "graphics"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-graphics = "0.8.1"
embedded-hal = { version = "1" }
embedded-hal-bus = "0.2"
embedded-text = "0.7.2"
fugit = "0.3.7"
nb = "1.1.0"
panic-halt = "1.0.0"
pimoroni_badger2040 = "0.6"
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
tinybmp = "0.6.0"
uc8151 = { path = "../../" }
